- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    Qt Creator 3.0.1
- 
    None
- 
    Debian Jessie, Android NDK r9d, Qt Creator 3.0.1
Hello,
The problem is as follows : when one adds the android NDK folder into Qt Creator, only the toolchains that uses GCC get detected, and not the Clang ones.
It would be useful to get the Android Clang toolchains automatically added.
- is duplicated by
- 
                    QTCREATORBUG-21281 Android: Kits not set up when using NDK r18 -           
- Closed
 
-         
- relates to
- 
                    QTBUG-71280 Android deployment fails with "Cannot find the androiddeploy Json file." -         
- Closed
 
-         
- replaces
- 
                    QTCREATORBUG-21432 Compilers from Android NDK 18b are not detected -         
- Closed
 
-         
- resulted in
- 
                    QTCREATORBUG-21518 Android-clang compiler still not working in Qt Creator -         
- Closed
 
-         
- mentioned in
- 
                    Page Loading...